# ReadUTF8

./: .gitignore  Cargo.toml  README.md
src/: README.md  lib.rs  main.rs  read_delims.rs  read_utf.rs  read_utf8.rs  read_utf8_char.rs  read_utf8_delims.rs  read_utf_char.rs  read_utf_delims.rs
src/utils/: mod.rs  non_ascii_char.rs  tests_utils.rs
tests/: README.md  test_non_ascii_char.rs  test_number_bytes.rs  test_read_EOL.rs  test_read_char.rs  test_read_custom_delims.rs  test_read_delim_EOL.rs  test_read_delim_custom_delims.rs
tests_files/: create_test_custom_delim_file_corrupt.py
